# route-optimizer

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/route_optimizer/: config.py  main.py
src/route_optimizer/api/: routes.py
src/route_optimizer/data/sample_owner_operator/: company.json
src/route_optimizer/data/sample_owner_operator/cache/: roads_cache.json
src/route_optimizer/data/sample_owner_operator/clients/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  00021.json  00022.json  00023.json  00024.json  00025.json  client_001.json  client_002.json  client_003.json  client_004.json  client_005.json  client_006.json  client_007.json  client_008.json  client_009.json  client_010.json
src/route_optimizer/models/: client.py  client_group.py  company.py  location.py
src/route_optimizer/repositories/: client_repository.py
src/route_optimizer/services/: client_data.py  client_manager.py  client_service.py  dependencies.py  geocoding.py  geocoding_service.py  grouping_service.py  map_manager.py  routing.py  routing_service.py
src/route_optimizer/static/css/: style.css  tailwind.css
src/route_optimizer/static/js/: client-management.js  clients.js  map.js
src/route_optimizer/static/src/: styles.css
src/route_optimizer/templates/: base.html  clients.html  index.html  map.html
